--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alayna Puckett",
   "license": "MIT",
   "dependencies": {
+    "hover.css": "^2.3.2",
     "node-sass": "^4.14.1"
   }
 }
