--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Responsive Portfolio",
   "main": "index.js",
+  "homepage": "https://alaynapuck28.github.io/portfolioproject",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/scss --recursive"
+    "sass": "node-sass -w scss/ -o dist/scss --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Alayna Puckett",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "hover.css": "^2.3.2",
     "node-sass": "^4.14.1"
   }
